# tc-fitness

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
docs/: STANDARDS.md
src/tc_fitness/: __init__.py  baseline.py  catalogue.py  fitness_rule.py  gate.py  gate_config.py  keystone.py  lib.py  runner.py  staged.py
src/tc_fitness/checks/: __init__.py  branch_naming.py
src/tc_fitness/core_checks/: __init__.py  actionable_feedback.py  adr_number_unique.py  bicep_arm_lint.py  checkov_iac_security.py  ci_consumes_shared_gate.py  ci_fanin_parity.py  ci_silencers_have_rationale.py  cognitive_complexity.py  contract_change_has_test.py  coverage_floor.py  coverage_includes_branches.py  empty_body_intent.py  every_test_has_tier_marker.py  harness_canon_reference.py  integrity_state_predicate.py  license_present.py  mutation_survival_ratchet.py  new_code_coverage.py  no_commented_out_code.py  no_duplicate_string.py  no_env_monkeypatch.py  no_hardcoded_repo_paths.py  no_internal_monkeypatch.py  no_internal_patches.py  no_internal_patches_ts.py  no_language_suffix_in_package_names.py  no_llm_attribution.py  no_logging_secrets.py  no_noop_test_scripts.py  no_production_suppressions.py  no_real_names.py  no_test_imports_in_prod.py  no_test_only_kwargs.py  path_naming.py  pattern_chokepoint.py  posix_path_serialisation.py  readme_resolver_coverage.py  schema_conformance.py  script_help_smoke.py  (+5 more)
tests/: _core_check_assertions.py  test_baseline.py  test_branch_naming.py  test_catalogue.py  test_core_actionable_feedback.py  test_core_adr_number_unique.py  test_core_bicep_arm_lint.py  test_core_checkov_iac_security.py  test_core_ci_consumes_shared_gate.py  test_core_ci_fanin_parity.py  test_core_ci_silencers_have_rationale.py  test_core_cognitive_complexity.py  test_core_config_injection.py  test_core_contract_change_has_test.py  test_core_coverage_floor.py  test_core_coverage_includes_branches.py  test_core_empty_body_intent.py  test_core_every_test_has_tier_marker.py  test_core_harness_canon_reference.py  test_core_integrity_state_predicate.py  test_core_license_present.py  test_core_mutation_survival_ratchet.py  test_core_new_code_coverage.py  test_core_no_commented_out_code.py  test_core_no_duplicate_string.py  test_core_no_env_monkeypatch.py  test_core_no_hardcoded_repo_paths.py  test_core_no_internal_monkeypatch.py  test_core_no_internal_patches.py  test_core_no_internal_patches_ts.py  test_core_no_language_suffix_in_package_names.py  test_core_no_llm_attribution.py  test_core_no_logging_secrets.py  test_core_no_noop_test_scripts.py  test_core_no_production_suppressions.py  test_core_no_real_names.py  test_core_no_test_imports_in_prod.py  test_core_no_test_only_kwargs.py  test_core_path_naming.py  test_core_pattern_chokepoint.py  (+20 more)
