[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "three-cubes-fitness"
version = "0.7.0"
description = "Shared architecture-fitness primitives + the single runnable quality gate for Three Cubes repos (kairix, tc-agent-zone): the `tc-fitness run` gate orchestrator (one binary CI and local both invoke), baseline-gating helpers, agent-actionable emit/YAML helpers, the unified ratchet grammar, the catalogue-driven repo-agnostic check runner, and the declarative seam-absorption factories + branch-naming gate."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Three Cubes" }]
keywords = ["fitness-functions", "architecture", "ratchet", "ci", "quality-gate"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Pure stdlib at runtime. The `tc-fitness run` gate orchestrator uses the stdlib
# `tomllib` (3.11+) to read the consumer's `[tool.tc_fitness]` config, so no
# runtime dependency is added. PyYAML is an optional extra: load_yaml() degrades
# gracefully (returns an error string) when it is absent, so consumers that
# never touch YAML need not install it.
dependencies = []

[project.scripts]
# The single runnable gate. Consumers invoke `uv run tc-fitness run` (local) and
# CI's reusable workflow invokes the same binary — one definition of the gate.
tc-fitness = "tc_fitness.gate:main"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "PyYAML>=6.0",
  "ruff>=0.15,<0.16",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tc_fitness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# Pragmatic, security-aware default set. S (bandit) is on so the gate's own
# subprocess use is reviewed; the two genuinely-config-driven subprocess calls in
# gate.py carry inline `# noqa: S603/S602` with a rationale.
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
# E501  — line length is governed by `line-length`, not a hard error.
# RUF022 — the `__all__` lists are grouped by source module with comments
#          (lib / ratchet / catalogue / context / gate / runner), a deliberate
#          readability layout that an isort-style alphabetic sort would destroy.
ignore = ["E501", "RUF022"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert`, build synthetic subprocess fixtures, and
# reference tmp paths.
"tests/**" = ["S101", "S108", "S603", "S607", "S404"]
# The runner IS a check dispatcher: launching `bash` / the python interpreter on
# a config-declared script path is its whole job (S603/S607), and its
# type-narrowing `assert cfg.checks_dir is not None` post-`__post_init__` guards
# (S101) are invariants the loader establishes, not input validation.
"src/tc_fitness/runner.py" = ["S101", "S603", "S607"]
# The branch-naming gate shells out to `git` by name (S607) — a fixed, trusted
# argv0, not a partial path under attacker control.
"src/tc_fitness/checks/branch_naming.py" = ["S607"]
# The keystone drift-enders resolve git history (prev-tag, added-files, baseline
# content at a ref) by invoking `git` by name with a fixed argv0 and
# config-declared refs — the same trusted-argv0 posture as branch_naming, not
# input under attacker control (S603/S607).
"src/tc_fitness/keystone.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src/tc_fitness"]

[[tool.mypy.overrides]]
# PyYAML is an OPTIONAL extra (load_yaml degrades gracefully when it is absent),
# so its stubs are not a hard dependency of the type check.
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# defusedxml is an OPTIONAL preference: the coverage CORE checks try it for a
# hardened XXE-safe parse and fall back to the stdlib (after an explicit
# DTD/entity rejection) when it is absent, so its stubs are not a hard
# dependency of the type check.
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

# ── tc-fitness gate declaration — the engine eats its own dog food ───────────
# The engine runs THROUGH the gate it ships: `uv run tc-fitness run` reads this
# block and runs the engine's own quality gate (ruff / format / mypy / pytest)
# plus its own branch-naming module — the SAME binary both CI and a local run
# invoke, so local == CI by construction. ci.yml's `check` matrix job shrinks to
# `setup-uv-cached → uv run tc-fitness run`, keeping the py3.12/3.13 matrix
# caller-side while the gate's STEPS live here as config, never hand-copied YAML.
[tool.tc_fitness]
name = "three-cubes-fitness self gate"

# ruff lint over the package + tests — the engine's own source style gate.
[[tool.tc_fitness.steps]]
id = "ruff"
summary = "ruff check src tests"
run = ["ruff", "check", "src", "tests"]
fix = "run `ruff check --fix src tests`"
next = "re-run `tc-fitness run`"

# ruff format --check over the formatter-gated set (the v0.5.0 gate + the whole
# v0.6.0 CORE-check package + every CORE check test + branch_naming). The
# pre-existing lib/ratchet/runner/staged sources predate any formatter config; a
# repo-wide `ruff format` pass is a separate one-time hygiene commit, so the
# scope is held identical to ci.yml's format step — same files in, same verdict
# out (the equivalence law: this step reports the SAME drift CI's step does).
[[tool.tc_fitness.steps]]
id = "ruff-format"
summary = "ruff format --check (gate + v0.6.0 core modules)"
shell = """
ruff format --check \
  src/tc_fitness/gate.py src/tc_fitness/gate_config.py \
  tests/test_gate.py tests/test_gate_config.py \
  src/tc_fitness/baseline.py src/tc_fitness/fitness_rule.py \
  src/tc_fitness/keystone.py src/tc_fitness/core_checks/ \
  tests/test_baseline.py tests/test_fitness_rule.py \
  tests/test_keystone.py tests/_core_check_assertions.py \
  tests/test_core_no_duplicate_string.py \
  tests/test_core_registry_consistency.py \
  tests/test_core_security_freshness_design_law.py \
  src/tc_fitness/checks/branch_naming.py \
  $(printf 'tests/test_core_%s.py ' \
    actionable_feedback adr_number_unique ci_fanin_parity \
    ci_silencers_have_rationale cognitive_complexity coverage_floor \
    coverage_includes_branches empty_body_intent every_test_has_tier_marker \
    license_present mutation_survival_ratchet no_commented_out_code \
    no_env_monkeypatch no_hardcoded_repo_paths no_internal_monkeypatch \
    no_internal_patches no_internal_patches_ts \
    no_language_suffix_in_package_names no_llm_attribution no_logging_secrets \
    no_noop_test_scripts no_production_suppressions no_real_names \
    no_test_imports_in_prod no_test_only_kwargs path_naming \
    posix_path_serialisation readme_resolver_coverage schema_conformance \
    script_help_smoke shellcheck_disable_with_reason sonar_ignore_rationale \
    suppressions_have_rationale test_skip_rationale unused_params_named)
"""
fix = "run `ruff format` over the listed files"
next = "re-run `tc-fitness run`"

# mypy --strict over the package. `strict = true` + `files = ["src/tc_fitness"]`
# live in [tool.mypy], so a bare `mypy` is already the strict, scoped check.
# Dropped from the `--staged` <60s smoke (skip_when_staged): a whole-package
# strict type check is a full-tree leg, not a per-staged-file smoke. The full
# `tc-fitness run` (CI + the merge bar) still runs it.
[[tool.tc_fitness.steps]]
id = "mypy"
summary = "mypy --strict src/tc_fitness"
run = ["mypy"]
skip_when_staged = true
fix = "resolve the type error mypy reports"
next = "re-run `tc-fitness run`"

# pytest with coverage — the engine's self-test suite (the same command ci.yml
# ran), producing coverage.xml for the downstream Sonar handoff. Dropped from
# the `--staged` <60s smoke (skip_when_staged): the full coverage run is the
# expensive full-tree leg the smoke deliberately defers to the merge gate.
[[tool.tc_fitness.steps]]
id = "pytest"
summary = "pytest (with coverage)"
run = ["pytest", "-q", "--cov=tc_fitness", "--cov-report=term-missing", "--cov-report=xml"]
skip_when_staged = true
fix = "fix the failing test or the code under test"
next = "re-run `tc-fitness run`"

# The engine's OWN branch-naming gate, run against the gate. branch_naming is an
# engine-shipped module (`tc_fitness.checks.branch_naming`) with a `python -m`
# entrypoint; it gates the LIVE branch name (not a per-file baseline), so it is
# not a `core:`/FitnessRule check — the faithful binding is its module
# entrypoint. The engine thus dogfoods its own convention check.
[[tool.tc_fitness.steps]]
id = "branch-naming"
summary = "branch_naming (engine's own convention gate)"
run = ["python", "-m", "tc_fitness.checks.branch_naming"]
fix = "rename the branch to the Linear <user>/<team>-<number>-<slug> shape"
next = "re-run `tc-fitness run`"
